# projeto-AED

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  build_windows.bat  build_windows.ps1  main.c  produtos.c  produtos.h
.github/workflows/: cmake-build-all.yml
cmake/: windeployqt.cmake
src/: cJSON.c  estrutura.txt  inputhelper.h  iohelp.c  iohelp.h  main.c  operacoes.c  operacoes.h  perf.h  produtos.c  produtos.h  stacks.c  stacks.h  storage.c  storage.h  visual.c  visual.h
src/cli/: cli.c  cli.h  ioutil.c  ioutil.h
src/gui/: LinhaDialog.cpp  LinhaDialog.h  LinhaDialog.ui  MainMenu.ui  MenuDialog.cpp  MenuDialog.h  MenuDialog.ui  README.md  gui.cpp  gui.h  mainmenu.cpp  mainmenu.h  mainmenu.ui
